cmake_minimum_required(VERSION 2.6)
if(BUILD_SP)
  file(GLOB SP_SRC ${SP_DIR}/*.f )
# file(GLOB SP_4_SRC ${SP_DIR}/*.f )
  set_source_files_properties( ${SP_SRC} PROPERTIES COMPILE_FLAGS ${SP_Fortran_FLAGS} )
# set_source_files_properties( ${SP_4_SRC} PROPERTIES COMPILE_FLAGS ${SP_Fortran_4_FLAGS} )
  file(GLOB SP_F77_SRC ${SP_DIR}/*.F )
# file(GLOB SP_F77_4_SRC ${SP_DIR}/*.F )
  if( SP_F77_SRC )
    set_source_files_properties( ${SP_F77_SRC} PROPERTIES COMPILE_FLAGS ${SP_F77_FLAGS} )
#   set_source_files_properties( ${SP_F77_4_SRC} PROPERTIES COMPILE_FLAGS ${SP_Fortran_4_FLAGS} )
  endif()
  add_library( ${sp} STATIC ${SP_SRC} ${SP_F77_SRC} )
# add_library( ${sp4} STATIC ${SP_4_SRC} ${SP_F77_4_SRC} )
  set_target_properties( ${sp} PROPERTIES Fortran_MODULE_DIRECTORY ${CMAKE_INCLUDE_OUTPUT_DIRECTORY} )
# set_target_properties( ${sp4} PROPERTIES Fortran_MODULE_DIRECTORY ${CMAKE_INCLUDE_4_OUTPUT_DIRECTORY} )
endif()
