cmake_minimum_required(VERSION 2.8)
if(BUILD_W3EMC)
  file(GLOB W3EMC_SRC ${W3EMC_DIR}/*.F)
  file(GLOB W3EMC_F77_SRC ${W3EMC_DIR}/*.f)
# file(GLOB W3EMC_4_SRC ${W3EMC_DIR}/*.F)
# file(GLOB W3EMC_4_F77_SRC ${W3EMC_DIR}/*.f)
  set_source_files_properties( ${W3EMC_F77_SRC} COMPILE_FLAGS ${W3EMC_Fortran_FLAGS})
  set_source_files_properties( ${W3EMC_SRC} COMPILE_FLAGS ${W3EMC_Fortran_FLAGS})
# set_source_files_properties( ${W3EMC_4_F77_SRC} COMPILE_FLAGS ${W3EMC_4_Fortran_FLAGS})
# set_source_files_properties( ${W3EMC_4_SRC} COMPILE_FLAGS ${W3EMC_4_Fortran_FLAGS})
  include_directories(${SIGIOINC})
  add_library( ${w3emc} STATIC ${W3EMC_SRC} ${W3EMC_F77_SRC} )
# add_library( ${w3emc4} STATIC ${W3EMC_4_SRC} ${W3EMC_4_F77_SRC} )
  set_target_properties( ${w3emc} PROPERTIES Fortran_MODULE_DIRECTORY ${CMAKE_INCLUDE_OUTPUT_DIRECTORY} )
# set_target_properties( ${w3emc4} PROPERTIES Fortran_MODULE_DIRECTORY ${CMAKE_INCLUDE_4_OUTPUT_DIRECTORY} )
  if(BUILD_SIGIO) 
    add_dependencies(${w3emc} ${SIGIO_LIBRARY} )
#   add_dependencies(${w3emc4} ${SIGIO_LIBRARY} )
  endif()

endif()
