cmake_minimum_required(VERSION 2.6)
if(BUILD_W3NCO)
  set (CMAKE_C_FLAGS "-O0 -DUNDERSCORE -DLINUX -D__linux__")
  file(GLOB W3NCO_SRC ${W3NCO_DIR}/*.f)
  file(GLOB W3NCO_F77_SRC ${W3NCO_DIR}/*.F)
# file(GLOB W3NCO_4_SRC ${W3NCO_DIR}/*.f)
# file(GLOB W3NCO_4_F77_SRC ${W3NCO_DIR}/*.F)
  file(GLOB W3NCO_C_SRC ${W3NCO_DIR}/*.c)
  set_source_files_properties( ${W3NCO_C_SRC} COMPILE_FLAGS ${W3NCO_C_FLAGS})
  set_source_files_properties( ${W3NCO_F77_SRC} COMPILE_FLAGS ${W3NCO_Fortran_FLAGS})
  set_source_files_properties( ${W3NCO_SRC} COMPILE_FLAGS ${W3NCO_Fortran_FLAGS})
# set_source_files_properties( ${W3NCO_4_F77_SRC} COMPILE_FLAGS ${W3NCO_4_Fortran_FLAGS})
# set_source_files_properties( ${W3NCO_4_SRC} COMPILE_FLAGS ${W3NCO_4_Fortran_FLAGS})
  add_library( ${w3nco} STATIC ${W3NCO_C_SRC} ${W3NCO_SRC} ${W3NCO_F77_SRC} )
# add_library( ${w3nco4} STATIC ${W3NCO_C_SRC} ${W3NCO_4_SRC} ${W3NCO_4_F77_SRC} )
  set_target_properties( ${w3nco} PROPERTIES Fortran_MODULE_DIRECTORY ${CMAKE_INCLUDE_OUTPUT_DIRECTORY} )
# set_target_properties( ${w3nco4} PROPERTIES Fortran_MODULE_DIRECTORY ${CMAKE_INCLUDE_4_OUTPUT_DIRECTORY} )
  message("HEY w3nco lib is called ${w3nco}")
# message("HEY w3nco_4 lib is called ${w3nco4}")
  if(BUILD_SIGIO)
    add_dependencies(${w3nco} ${SIGIO_LIBRARY} )
#   add_dependencies(${w3nco4} ${SIGIO_LIBRARY} )
  endif() 
endif()
